# Demo-Software

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.MD  IMU Closed Loop Leveling Plan.md  README.md  ROS_Specification.md  agent-plan.md  closed-loop-bringup-plan.md  colcon_ignore_packages.txt  data-flow-motor-controls.md  make-documentation-agent-instructions.md  package.xml  pr117_changes.txt  setup.sh  tatuswq
core/rammp_prototype_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
core/rammp_prototype_bringup/config/: camera_config.yaml  camera_demo_main.yaml  camera_nav.yaml  camera_no_orbbec.yaml  camera_no_realsense.yaml  camera_wrist.yaml  cyclonedds.xml
core/rammp_prototype_bringup/env_hooks/: rmw_config.dsv  rmw_config.sh.in
core/rammp_prototype_bringup/launch/: camera.launch.py  cornell.launch.py  full.launch.py  launch.sh  launch_neu.sh  luci.launch.py
core/rammp_prototype_bringup/resource/: rammp_prototype_bringup
core/rammp_prototype_gui/: GuiBridgeNode.md  GuiMonitorNode.md  package.xml  setup.cfg  setup.py
core/rammp_prototype_gui/launch/: Gui_bridge.launch.py
core/rammp_prototype_gui/rammp_prototype_gui/: GuiMonitor.py  Gui_bridge.py  mock_button_info.py  mock_curb_marker.py  trim_tui.py
core/rammp_prototype_gui/rammp_prototype_gui/streaming/: __init__.py  client.py  compression.py  protocol.py  sender.py
core/rammp_prototype_gui/rammp_prototype_gui/unreal_remote/: __init__.py
core/rammp_prototype_gui/rammp_prototype_gui/unreal_remote_websocket/: __init__.py
core/rammp_prototype_utils/: CMakeLists.txt  package.xml
core/rammp_prototype_utils/src/: image_rotate_node.cpp
demo_modules/cornell_feeding/: Drinking Node.md  drink_action_server.md  package.xml  requirements.txt  setup.cfg  setup.py
demo_modules/cornell_feeding/cornell_feeding/: drink_action_server.py  drinking_node.py
demo_modules/cornell_feeding/launch/: cornell_feeding.launch.py  cornell_real.launch.py
demo_modules/cornell_feeding/rammp/actions/: base.py  bring_cup_to_mouth.py  grab_cup_from_table.py  home_cup.py  locate_cup.py  pickup_and_order.py  put_cup_back_to_holder.py
demo_modules/cornell_feeding/rammp/assets/: simplify_mesh.py  vhacd_log.txt
demo_modules/cornell_feeding/rammp/assets/robot/: test_robot.py
demo_modules/cornell_feeding/rammp/control/robot_controller/: arm_client.py  command_interface.py
demo_modules/cornell_feeding/rammp/control/robot_controller/safety_log/: arm_commands_log.txt  default_speed_limits.txt  joint_following_safety_info.txt  max_speed_limits.txt  old_joint_following_safety_enables.txt  old_joint_following_safety_info.txt  old_safety_info.txt  original_speed_limits.txt  safety_info.txt
demo_modules/cornell_feeding/rammp/integration/: color_mask_tuner.py  cup_handle_viz.py  drink_action_client.py  drink_action_server.py
demo_modules/cornell_feeding/rammp/interfaces/: perception_interface.py  realsense_interface.py  rviz_interface.py
demo_modules/cornell_feeding/rammp/perception/drink_perception/: drink_geometry.py  drink_perception.py
demo_modules/cornell_feeding/rammp/perception/gestures_perception/: static_gesture_detectors.py
demo_modules/cornell_feeding/rammp/perception/head_perception/: calibrate_head.py  deca_perception.py  head_geometry.py  landmark_indices.py  mediapipe_perception.py
demo_modules/cornell_feeding/rammp/perception/head_perception/DECA/: main_train.py
demo_modules/cornell_feeding/rammp/perception/head_perception/DECA/decalib/: deca.py  trainer.py
demo_modules/cornell_feeding/rammp/perception/head_perception/DECA/decalib/datasets/: aflw2000.py  build_datasets.py  datasets.py  detectors.py  ethnicity.py  now.py  train_datasets.py  vggface.py  vox.py
demo_modules/cornell_feeding/rammp/perception/head_perception/DECA/decalib/models/: FLAME.py  decoders.py  encoders.py  frnet.py  (+2 more)
demo_modules/cornell_feeding/rammp/perception/head_perception/DECA/demos/: demo_reconstruct.py  demo_teaser.py  demo_transfer.py
demo_modules/cornell_feeding/rammp/perception/head_perception/config/: fixed_model_head_points.npy  fork_forque_pose.npy  fork_head_points.npy  fork_reference_neck_frame.npy  forktool_tip_transform.npy  forque_pose.npy  head_points.npy  print_transforms.py
demo_modules/cornell_feeding/rammp/perception/head_perception/config/drink/: head_points.npy  reference_neck_frame.npy  tool_tip_transform.npy
demo_modules/cornell_feeding/rammp/perception/head_perception/config/fork/: head_points.npy  old_tool_tip_transform.npy  reference_neck_frame.npy  tool_tip_transform.npy
demo_modules/cornell_feeding/rammp/perception/head_perception/config/wipe/: head_points.npy  reference_neck_frame.npy  tool_tip_transform.npy
demo_modules/cornell_feeding/rammp/simulation/: control.py  planning.py  scene_description.py  simulator.py  state.py  world.py
demo_modules/cornell_feeding/rammp/simulation/configs/: vention.yaml  wheelchair.yaml  wheelchair.yaml.old
demo_modules/cornell_feeding/rammp/utils/: timing.py
demo_modules/cornell_feeding/test/: test_flake8.py  test_gripper_direction.py  test_pep257.py
demo_modules/neu_navigation/: CMakeLists.txt  Navigation Node.md  package.xml  requirements.txt  setup.cfg  setup.py
demo_modules/neu_navigation/scripts/: perception_curb_descent_detection_node.py  perception_curb_detection_node.py
hardware/pid_tuner/: TEENSY_PROTOCOL.md  manual_control_README.md  pyproject.toml  requirements.txt  run.py
hardware/pid_tuner/data/: __init__.py  data_store.py  joint_config.py
hardware/pid_tuner/ros_bridge/: __init__.py  luci_client.py  luci_drive.py  manual_control_node.py
hardware/pid_tuner/serial_driver/: __init__.py  keyframe.py  protocol.py  serial_handler.py
hardware/pid_tuner/ui/: __init__.py  config_viewer.py  control_panel.py  drive_wheel_display.py  encoder_overview.py  imu_display.py  main_window.py  scaling.py  sequence_editor.py  sequence_plotter.py  serial_console.py  strain_gauge_display.py  theme.py
utils/data_logger/: package.xml  setup.py
utils/data_logger/data_logger/: ros_bag_node.py
(+427 files in other folders)
