<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rammp_prototype_gui</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>gui_interfaces</depend>
  <depend>neu_navigation_interfaces</depend>
  <depend>cmu_door_opener_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>realsense2_camera_msgs</depend>
  <depend>python3-numpy</depend>
  <exec_depend>python3-websockets</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-posix-ipc</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
