<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cornell_feeding</name>
  <version>0.0.0</version>
  <description>Cornell drinking module: DrinkAction servers backed by feeding_deployment (cup perception + collision-aware planning), executed via the shared arm_driver.</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>cornell_feeding_interfaces</depend>

  <!-- Python runtime deps for the vendored rammp stack, resolved by rosdep.
       apt-backed keys (numpy/scipy/opencv/yaml/defusedxml/imageio); stock pip
       keys (mediapipe/open3d/pybullet); and the git/pinned-pip keys defined in
       hardware/arm_driver/rosdep/python.yaml (PRPL packages + protobuf). -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-defusedxml</exec_depend>
  <exec_depend>python3-imageio</exec_depend>
  <exec_depend>python3-mediapipe-pip</exec_depend>
  <exec_depend>python3-open3d-pip</exec_depend>
  <exec_depend>python3-pybullet-pip</exec_depend>
  <exec_depend>python3-protobuf-pip</exec_depend>
  <exec_depend>python3-pybullet-helpers-pip</exec_depend>
  <exec_depend>python3-relational-structs-pip</exec_depend>
  <exec_depend>python3-prpl-utils-pip</exec_depend>
  <exec_depend>python3-tomsutils-pip</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
