<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>data_logger</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="elw283@pitt.edu">herl</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>rammp_prototype_interfaces</depend>
  <depend>gui_interfaces</depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>rclpy.serialization</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
